html overscroll behaviour none to prevent reloading default behaviour on mobile devices

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -11,6 +11,7 @@
 
 html {
   scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
 
 body {
